# ward-rounding-optimizer

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.ja.md   README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: snapshot.rs
apps/cli/tests/snapshots/: mini_case.txt  sensitivity.txt
crates/domain/: Cargo.toml
crates/domain/src/: geometry.rs  ids.rs  lib.rs  problem.rs  room.rs  score.rs  scoring.rs  solution.rs  staff.rs  task.rs  time.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: baseline.rs  common.rs  fixtures.rs  greedy.rs  lib.rs  placement.rs  report.rs  routing.rs  score.rs  scoring.rs  solver.rs  validate.rs
crates/optimizer/src/baseline/: doctor_accompany.rs  mod.rs  room_order.rs
crates/optimizer/src/fixtures/: mini_case_001.rs  mod.rs
crates/optimizer/src/greedy/: mod.rs  optimizer.rs
crates/optimizer/src/report/: comparison.rs  mod.rs
crates/optimizer/tests/: mini_case.rs
